--- a/Reviews-page/Wazamba/Bonus/index.html
+++ b/Reviews-page/Wazamba/Bonus/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <!-- Google Tag Manager -->
@@ -412,40 +412,42 @@
 
           <h2>Introduction to Wazamba Casino</h2>
           <p>
-            Wazamba Casino is a popular online gambling platform that offers an
-            impressive variety of <strong>bonuses</strong>,
-            <strong>promotions</strong>, and
-            <strong>VIP rewards</strong> tailored for both casino players and
-            sports betting enthusiasts. Whether you're interested in exciting
-            slot games or sports wagering, Wazamba has crafted a series of
-            offers that enhance your gaming experience. In this article, we’ll
-            take a closer look at the casino bonuses, sportsbook promotions, and
-            the comprehensive VIP program available at Wazamba Casino.
+            Wazamba Casino is a leading online gambling platform, renowned for
+            offering a rich variety of <strong>bonuses</strong>,
+            <strong>promotions</strong>, and <strong>VIP rewards</strong> to
+            both casino enthusiasts and sports betting fans. With an impressive
+            selection of slot games, live casino tables, and an extensive
+            sportsbook, Wazamba ensures every player can enjoy a thrilling
+            gaming experience.
           </p>
-
-          <h2>Welcome Bonuses for Casino and Sportsbook Players</h2>
-          <div class="review-img">
-            <img
-              src="/img/news-banners/wazamba-promotions.webp"
-              loading="lazy"
-              alt="wazamba site"
-            />
-          </div>
           <p>
-            At Wazamba Casino, new players are welcomed with enticing
-            <strong>welcome bonuses</strong> designed to kickstart their gaming
-            journey:
+            In this article, we will explore the current
+            <strong>casino bonuses</strong>, <strong>crypto promotions</strong>,
+            <strong>sports betting offers</strong>, and the comprehensive
+            <strong>VIP program</strong> that rewards loyalty at Wazamba Casino.
           </p>
 
-          <h3>Casino Welcome Bonus: 100% up to €500 + 200 Free Spins</h3>
+          <h2>Welcome Bonuses for Casino Players</h2>
+          <p>
+            New players at Wazamba are greeted with a variety of welcome offers
+            that help them start their gaming journey with extra funds and free
+            spins. Whether you prefer traditional fiat deposits or
+            cryptocurrencies, Wazamba has a tailored welcome bonus to suit your
+            needs.
+          </p>
+
+          <h3>
+            Casino Welcome Bonus: 100% up to €500 + 200 Free Spins + 1 Bonus
+            Crab
+          </h3>
           <div class="review-img">
             <img
-              src="/img/news-banners/wazamba-welcome-bonus.webp"
+              src="/img/news-banners/wazamba-welcomebonus.webp"
               loading="lazy"
-              alt="wazamba site"
+              alt="Wazamba Casino Welcome Bonus"
+              width="400px"
             />
           </div>
-
           <ul>
             <li><strong>Minimum Deposit:</strong> €20</li>
             <li>
@@ -453,14 +455,92 @@
             </li>
           </ul>
           <p>
-            This generous offer allows you to double your initial deposit and
-            enjoy 200 free spins over your first 10 days on the platform. The
-            spins are credited at a rate of 20 per day, providing ample time to
-            explore the casino. Please note that this bonus is only available
-            for deposits made via eligible payment methods, excluding Skrill and
-            Neteller.
+            This popular bonus allows new players to double their first deposit
+            and receive 200 free spins distributed over the first 10 days (20
+            spins per day). On top of this, players are rewarded with a
+            <strong>Bonus Crab</strong> that can be used in special casino
+            games. This bonus is available for eligible deposit methods and
+            excludes certain payment providers.
           </p>
 
+          <h3>
+            Crypto Welcome Bonus: Up to 100 mBTC + 100 Free Spins + 1 Bonus Crab
+          </h3>
+          <div class="review-img">
+            <img
+              src="/img/news-banners/wazamba-crypto-welcome-bonus.webp"
+              loading="lazy"
+              alt="Wazamba Casino Welcome Bonus"
+            />
+          </div>
+          <ul>
+            <li>
+              <strong>Minimum Deposit:</strong> Depends on the cryptocurrency
+              used
+            </li>
+            <li>
+              <strong>Wagering Requirements:</strong> 35x (bonus + deposit)
+            </li>
+          </ul>
+          <p>
+            For players who prefer using cryptocurrency, Wazamba offers a
+            <strong>crypto welcome bonus</strong> of up to 100 mBTC, along with
+            100 free spins and 1 Bonus Crab. This makes it easy to enjoy crypto
+            gaming while maximizing your starting balance.
+          </p>
+
+          <h2>Ongoing Casino Promotions</h2>
+          <div class="review-img">
+            <img
+              src="/img/news-banners/wazamba-casino-promo.webp"
+              loading="lazy"
+              alt="Wazamba Casino Welcome Bonus"
+            />
+          </div>
+          <p>
+            Wazamba ensures players are rewarded beyond the welcome bonuses
+            through a variety of <strong>ongoing promotions</strong> and
+            seasonal offers. These are designed to provide consistent value and
+            make every gaming session exciting.
+          </p>
+
+          <h3>Key Casino Promotions:</h3>
+          <ul>
+            <li>
+              <strong>Weekend Reload Bonus:</strong> Recharge your account over
+              the weekend with a bonus of up to €700 plus 50 free spins.
+            </li>
+            <li>
+              <strong>Weekly Reload Bonus:</strong> Get 50 free spins every week
+              just for playing.
+            </li>
+            <li>
+              <strong>Weekly Cashback:</strong> Receive 15% cashback on weekly
+              losses up to €3000, helping to recover some of your spent funds.
+            </li>
+            <li>
+              <strong>Sunday Spins:</strong> Claim up to 100 free spins each
+              Sunday and enjoy top slots without spending additional funds.
+            </li>
+            <li>
+              <strong>Live Casino Cashback:</strong> For players who enjoy live
+              dealer games, 20% cashback is available on losses up to €200.
+            </li>
+          </ul>
+
+          <h2>Sports Betting Promotions</h2>
+          <div class="review-img">
+            <img
+              src="/img/news-banners/wazamba-sports-wb.webp"
+              loading="lazy"
+              alt="Wazamba Casino Welcome Bonus"
+            />
+          </div>
+          <p>
+            Sports bettors at Wazamba are not left out, with numerous promotions
+            aimed at enhancing their betting experience. These bonuses cater to
+            both casual and seasoned sports enthusiasts.
+          </p>
           <h3>Sportsbook Welcome Bonus: 100% up to €100</h3>
           <ul>
             <li><strong>Minimum Deposit:</strong> €20</li>
@@ -469,148 +549,92 @@
               country)
             </li>
           </ul>
+
+          <p>
+            This bonus ensures new sports bettors have extra funds to explore
+            the wide range of sports markets available at Wazamba.
+          </p>
+
+          <h3>Current Sports Promotions:</h3>
           <div class="review-img">
             <img
-              src="/img/news-banners/wazamba-sports-welcomeBonus.webp"
+              src="/img/news-banners/wazamba-sports-promos.webp"
               loading="lazy"
-              alt="wazamba site"
+              alt="Wazamba Casino Welcome Bonus"
             />
           </div>
-          <p>
-            Both offers provide new players an excellent start, ensuring they
-            have extra funds to explore the diverse range of casino games and
-            sports betting markets at Wazamba.
-          </p>
-
-          <h2>Ongoing Casino Promotions</h2>
-          <p>
-            Wazamba Casino keeps the excitement alive for both new and loyal
-            players with a range of <strong>ongoing promotions</strong>:
-          </p>
-
-          <h3>Casino Promotions Include:</h3>
           <ul>
             <li>
-              <strong>15% Weekly Cashback:</strong> Get up to €3000 back on your
-              weekly losses, allowing you to recoup some of your spent funds.
+              <strong>Weekly Cashback:</strong> Recover 10% up to €500 on your
+              weekly sports betting losses.
             </li>
             <li>
-              <strong>Live Casino Cashback:</strong> Players who prefer live
-              games can claim 20% cashback up to €2000 on losses in the live
-              casino section.
+              <strong>Accumulator Boost:</strong> Boost your accumulator bets by
+              up to 100%, maximizing potential winnings.
             </li>
             <li>
-              <strong>Weekend Reload Bonus:</strong> Boost your weekend gameplay
-              with a reload bonus of up to €700 plus 50 free spins.
+              <strong>Bore Draw Refund:</strong> Receive a 100% refund if your
+              selected match ends in a 0-0 draw.
             </li>
             <li>
-              <strong>Daily Drops & Wins:</strong> Participate in daily slot
-              tournaments for a chance to win a share of €9000 in cash prizes.
+              <strong>Boosted Odds:</strong> Enjoy enhanced winnings on selected
+              events with boosted odds promotions.
             </li>
             <li>
-              <strong>Instagram Bonus:</strong> Follow Wazamba Casino on
-              Instagram to receive 10 free spins, allowing you to enjoy games
-              like Gonzo’s Quest with no deposit required.
-            </li>
-          </ul>
-
-          <h3>Special Casino Offers:</h3>
-          <ul>
-            <li>
-              <strong>€1000 Roulette Prize Drops:</strong> Enjoy exciting
-              roulette games with random prize drops of up to €1000.
+              <strong>2 Goals Ahead Early Payout:</strong> Secure your bet early
+              if your team leads by 2 goals.
             </li>
             <li>
-              <strong>100 Free Spins:</strong> Take advantage of free spins
-              promotions on various slot games.
-            </li>
-            <li>
-              <strong>XXXtreme Lightning Roulette:</strong> Discover special
-              offers available on this electrifying version of roulette.
-            </li>
-          </ul>
-
-          <h2>Sports Betting Promotions</h2>
-          <p>
-            Wazamba Casino also caters to sports betting enthusiasts with
-            several enticing promotions:
-          </p>
-
-          <ul>
-            <li>
-              <strong>€50 Free Bet + 50 Free Spins:</strong> Enjoy the best of
-              both worlds with this dual offer that rewards both sports bettors
-              and casino players.
-            </li>
-            <li>
-              <strong>Weekly Sports Cashback:</strong> Recover 50% up to €500 on
-              your weekly sports betting losses.
-            </li>
-            <li>
-              <strong>Acca Boost:</strong> Boost your accumulator bets by 10%,
-              with the chance to win up to €100,000 on successful combinations.
-            </li>
-            <li>
-              <strong>Sports Jackpot:</strong> Predict multiple sports outcomes
-              correctly for a chance to win the massive €15,000 sports jackpot.
-            </li>
-            <li>
-              <strong>Virtual Sports Bonus:</strong> Enjoy a virtual sports
-              excitement bonus of up to €500.
+              <strong>Weekly Reload Bonus:</strong> Boost your weekly sports
+              betting gameplay by 50% up to €500.
             </li>
           </ul>
 
           <h2>Wazamba VIP Program and Loyalty Rewards</h2>
           <p>
-            Wazamba Casino takes loyalty seriously, offering a comprehensive
-            <strong>VIP program</strong> with five distinct levels that reward
-            players for their continued play. Each time you place a bet on a
-            casino game or wager on a sports event, you earn loyalty coins that
-            can be exchanged for bonuses, free spins, or other rewards.
+            Wazamba Casino rewards consistent players with a robust
+            <strong>VIP program</strong>. The system has five levels, each
+            offering increasing perks for loyal players.
           </p>
 
           <h3>VIP Levels and Perks:</h3>
           <ul>
             <li>
               <strong>Progress Through Five VIP Levels:</strong> Unlock
-              additional perks such as higher withdrawal limits, increased
-              cashback percentages, and a personal account manager.
+              additional perks including higher withdrawal limits, better
+              cashback rates, and access to a personal account manager.
             </li>
             <li>
-              <strong>Earn Coins:</strong> Collect coins as you play, win
-              tournaments, or complete achievements. These coins can be
-              exchanged in the Wazamba Casino Shop for bonus money or other
-              rewards.
+              <strong>Earn Loyalty Coins:</strong> Place bets on casino games or
+              sports events to collect coins. These can be exchanged in the
+              Wazamba Shop for bonus funds, free spins, or other rewards.
             </li>
             <li>
               <strong>Exclusive VIP Bonuses:</strong> VIP players receive
-              tailored bonuses and promotions, ensuring they get the most out of
-              their gaming experience.
+              custom-tailored bonuses and promotions, ensuring a premium
+              experience for top players.
             </li>
           </ul>
           <p>
-            <strong>Important Note:</strong> The coins must be exchanged within
-            three months of earning them, and any bonus claimed through the
-            loyalty system will come with a 40x wagering requirement.
+            <strong>Important Note:</strong> Loyalty coins must be exchanged
+            within three months of earning them, and all bonus claims from the
+            VIP program carry a 40x wagering requirement.
           </p>
 
           <h2>Conclusion</h2>
           <p>
-            Wazamba Casino offers a complete and immersive gambling experience
-            for both casino players and sports bettors. From generous welcome
-            bonuses to a wide variety of ongoing promotions, there’s always an
-            exciting offer waiting for you. The robust VIP program and
-            continuous rewards system provide plenty of reasons for players to
-            return regularly. Whether you're spinning the reels on your favorite
-            slots, enjoying live casino games, or betting on your favorite
-            sports team, Wazamba ensures you have a rewarding and thrilling
-            time.
+            Wazamba Casino provides a complete gaming experience for both casino
+            enthusiasts and sports bettors. With generous welcome bonuses,
+            regular casino and sports promotions, and a comprehensive VIP
+            program, players are continuously rewarded for their activity.
+            Whether you're spinning slots, enjoying live casino action, or
+            betting on your favorite sports, Wazamba ensures that every session
+            is exciting and rewarding.
           </p>
-
           <p>
-            <strong>Remember:</strong> Always check the terms and conditions of
-            each promotion and ensure that you meet the wagering requirements to
-            maximize these fantastic offers!
+            <strong>Remember:</strong> Always check the terms and conditions for
+            each promotion, including wagering requirements, to fully benefit
+            from these offers.
           </p>
         </div>
       </div>
