--- a/Reviews-page/Wazamba/index.html
+++ b/Reviews-page/Wazamba/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <!-- Google Tag Manager -->
@@ -395,164 +395,65 @@
               VIP program available at Wazamba Casino.
             </p>
 
-            <h2>Welcome Bonuses for Casino and Sportsbook Players</h2>
             <p>
-              At Wazamba Casino, new players are welcomed with enticing bonuses
-              designed to kickstart their gaming journey:
+              Wazamba Casino is a top online gambling platform offering a wide
+              range of <strong>casino games</strong>,
+              <strong>live casino tables</strong>, and an extensive
+              <strong>sportsbook</strong>. Players can enjoy generous
+              <strong>welcome bonuses</strong>, ongoing
+              <strong>promotions</strong>, and a rewarding
+              <strong>VIP program</strong>.
             </p>
 
+            <h2>Welcome Bonuses</h2>
             <ul>
               <li>
-                <strong>Casino Welcome Bonus:</strong> 100% up to €500 + 200
-                Free Spins<br />
-                <strong>Minimum Deposit:</strong> €20<br />
-                <strong>Wagering Requirements:</strong> 35x (bonus + deposit)<br />
-                <div class="review-img">
-                  <img
-                    src="/img/news-banners/wazamba-welcome-bonus.webp"
-                    loading="lazy"
-                    alt="wazamba site"
-                  />
-                </div>
-
-                <p>
-                  This generous offer allows you to double your initial deposit
-                  and enjoy 200 free spins over your first 10 days on the
-                  platform. The spins are credited at a rate of 20 per day,
-                  providing ample time to explore the casino. Please note that
-                  this bonus is only available for deposits made via eligible
-                  payment methods, excluding Skrill and Neteller.
-                </p>
+                <strong>Casino Welcome:</strong> 100% up to €500 + 200 free
+                spins + 1 Bonus Crab (Min deposit €20, 35x wagering)
               </li>
               <li>
-                <strong>Sportsbook Welcome Bonus:</strong> 100% up to €100<br />
-                <strong>Minimum Deposit:</strong> €20<br />
-                <strong>Wagering Requirements:</strong> 5x or 6x (depending on
-                the country)<br />
-                <div class="review-img">
-                  <img
-                    src="/img/news-banners/wazamba-sports-welcomeBonus.webp"
-                    loading="lazy"
-                    alt="wazamba site"
-                  />
-                </div>
-
-                <p>
-                  Both offers provide new players an excellent start, ensuring
-                  they have extra funds to explore the diverse range of casino
-                  games and sports betting markets at Wazamba.
-                </p>
+                <strong>Crypto Welcome:</strong> Up to 100 mBTC + 100 free spins
+                + 1 Bonus Crab (35x wagering)
+              </li>
+              <li>
+                <strong>Sports Welcome:</strong> 100% up to €100 (Min deposit
+                €20, 5x–6x wagering)
               </li>
             </ul>
 
-            <h2>Ongoing Casino Promotions</h2>
-            <p>
-              Wazamba Casino keeps the excitement alive for both new and loyal
-              players with a range of ongoing promotions:
-            </p>
-            <div class="review-img">
-              <img
-                src="/img/news-banners/wazamba-promotions.webp"
-                loading="lazy"
-                alt="wazamba site"
-              />
-            </div>
-
+            <h2>Ongoing Promotions</h2>
             <ul>
               <li>
-                <strong>15% Weekly Cashback:</strong> Get up to €3000 back on
-                your weekly losses, allowing you to recoup some of your spent
-                funds.
+                <strong>Weekend Reload:</strong> Up to €700 + 50 free spins
               </li>
+              <li><strong>Weekly Reload:</strong> 50 free spins weekly</li>
               <li>
-                <strong>Live Casino Cashback:</strong> Players who prefer live
-                games can claim 20% cashback up to €2000 on losses in the live
-                casino section.
+                <strong>Weekly Cashback:</strong> 15% up to €3000 (casino), 10%
+                up to €500 (sports)
               </li>
+              <li><strong>Sunday Spins:</strong> Up to 100 free spins</li>
+              <li><strong>Live Casino Cashback:</strong> 20% up to €200</li>
               <li>
-                <strong>Weekend Reload Bonus:</strong> Boost your weekend
-                gameplay with a reload bonus of up to €700 plus 50 free spins.
-              </li>
-              <li>
-                <strong>Daily Drops & Wins:</strong> Participate in daily slot
-                tournaments for a chance to win a share of €9000 in cash prizes.
-              </li>
-              <li>
-                <strong>Instagram Bonus:</strong> Follow Wazamba Casino on
-                Instagram to receive 10 free spins, allowing you to enjoy games
-                like Gonzo’s Quest with no deposit required.
-              </li>
-              <li>
-                <strong>Special Casino Offers:</strong> Enjoy exciting roulette
-                games with random prize drops of up to €1000, 100 free spins
-                promotions on various slot games, and offers on XXXtreme
-                Lightning Roulette.
+                <strong>Sports Promotions:</strong> Accumulator Boost up to
+                100%, Bore Draw Refund, Boosted Odds, 2 Goals Ahead Early
+                Payout, Weekly Reload 50% up to €500
               </li>
             </ul>
 
-            <h2>Sports Betting Promotions</h2>
+            <h2>VIP Program</h2>
             <p>
-              Wazamba Casino also caters to sports betting enthusiasts with
-              several enticing promotions:
+              Wazamba offers a 5-level <strong>VIP program</strong> rewarding
+              loyal players with higher withdrawal limits, increased cashback,
+              personal account managers, and exclusive bonuses. Players earn
+              <strong>loyalty coins</strong> from bets, which can be exchanged
+              for bonuses and free spins (redeem within 3 months, 40x wagering
+              applies).
             </p>
 
-            <ul>
-              <li>
-                <strong>€50 Free Bet + 50 Free Spins:</strong> Enjoy the best of
-                both worlds with this dual offer that rewards both sports
-                bettors and casino players.
-              </li>
-              <li>
-                <strong>Weekly Sports Cashback:</strong> Recover 50% up to €500
-                on your weekly sports betting losses.
-              </li>
-              <li>
-                <strong>Acca Boost:</strong> Boost your accumulator bets by 10%,
-                with the chance to win up to €100,000 on successful
-                combinations.
-              </li>
-              <li>
-                <strong>Sports Jackpot:</strong> Predict multiple sports
-                outcomes correctly for a chance to win the massive €15,000
-                sports jackpot.
-              </li>
-              <li>
-                <strong>Virtual Sports Bonus:</strong> Enjoy a virtual sports
-                excitement bonus of up to €500.
-              </li>
-            </ul>
-
-            <h2>Wazamba VIP Program and Loyalty Rewards</h2>
             <p>
-              Wazamba Casino takes loyalty seriously, offering a comprehensive
-              VIP program with five distinct levels that reward players for
-              their continued play. Each time you place a bet on a casino game
-              or wager on a sports event, you earn loyalty coins that can be
-              exchanged for bonuses, free spins, or other rewards.
-            </p>
-
-            <h3>VIP Levels and Perks:</h3>
-            <ul>
-              <li>
-                Progress Through Five VIP Levels: Unlock additional perks such
-                as higher withdrawal limits, increased cashback percentages, and
-                a personal account manager.
-              </li>
-              <li>
-                Earn Coins: Collect coins as you play, win tournaments, or
-                complete achievements. These coins can be exchanged in the
-                Wazamba Casino Shop for bonus money or other rewards.
-              </li>
-              <li>
-                Exclusive VIP Bonuses: VIP players receive tailored bonuses and
-                promotions, ensuring they get the most out of their gaming
-                experience.
-              </li>
-            </ul>
-            <p>
-              <strong>Important Note:</strong> The coins must be exchanged
-              within three months of earning them, and any bonus claimed through
-              the loyalty system will come with a 40x wagering requirement.
+              Wazamba Casino combines generous bonuses, frequent promotions, and
+              a comprehensive VIP system to deliver an engaging and rewarding
+              experience for both casino enthusiasts and sports bettors.
             </p>
 
             <h2>Wazamba Casino Games: Slots, Table Games, and More</h2>
